# test-bait

./: .gitignore  ABLATION.md  README.md  README_CASA.md  RESULTS_README.md  RUN_ON_BASE_AND_LORA.md  SEMINAR_FEATURES.md  WEAKNESS_ZOO_RUNBOOK.md  WHAT_TO_DO.md  bait_weakness_test.py  build_weakness_zoo.py  pyproject.toml  requirements.txt  setup.py
casa/: README.md  __init__.py  __main__.py  auditor.py  bait_compat.py  calibration.py  cli.py  config.py  conformal.py  data.py  evalue.py  harness.py  logging_utils.py  metrics.py  null_distribution.py  pipeline.py  scan_result.py  scanner.py  seed_scoring.py
casa/configs/: default.yaml  example_prompts.txt
casa/docs/: ARCHITECTURE.md  CALIBRATION.md  THREAT_MODEL.md
casa/interfaces/: __init__.py  anthropic_api.py  base.py  local_hf.py  openai_api.py
casa/similarity/: __init__.py  base.py  cache.py  code_ast.py  embedding.py  hybrid.py  llm_judge.py
casa/tests/: __init__.py  conftest.py  test_auditor.py  test_bait_compat.py  test_cli.py  test_config.py  test_conformal.py  test_evalue.py  test_evasion.py  test_metrics.py  test_regression.py  test_scanner_pipeline.py  test_similarity.py
casa_lite/: README.md  __init__.py  __main__.py  bait_seeds.py  calibration.py  cli.py  clustering.py  config.py  conformal_quantile.py  harm.py  harness.py  justify.py  pipeline.py  scan_result.py  scoring.py  seedbank.py
casa_lite/configs/: default.yaml
casa_lite/docs/: ARCHITECTURE.md  CALIBRATION.md  THREAT_MODEL.md
examples/: casa_demo.py
scripts/: conformal.py  results_to_csv.py  rethreshold.py  scan.py  scan_status.py
(+13 files in other folders)
